CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(webscreenie)

SET( CMAKE_COLOR_MAKEFILE ON )
SET( CMAKE_VERBOSE_MAKEFILE ON )
SET( CMAKE_INCLUDE_CURRENT_DIR TRUE )

ADD_DEFINITIONS( -Wall -ansi)

SET( QT_USE_QTWEBKIT TRUE )
SET( QT_USE_QTNETWORK TRUE )
FIND_PACKAGE( Qt4 REQUIRED )

INCLUDE( ${QT_USE_FILE} )
INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR} )

QT4_WRAP_CPP(HAT src/webscreenie.h)
ADD_EXECUTABLE(webscreenie src/webscreenie.cpp ${HAT})
TARGET_LINK_LIBRARIES( webscreenie ${QT_LIBRARIES} )

INSTALL(TARGETS webscreenie DESTINATION bin)
